--- a/templates/partials/base.html
+++ b/templates/partials/base.html
@@ -3,10 +3,10 @@
 <html lang="en">
 
     <head>
-        
-        
+
+
         <meta charset="utf-8" />
-        <title>{% block title %}{% endblock title %} | Jobcy - Job Listing Template | Themesdesign</title>
+        <title>{% block title %}{% endblock title %} | KINS</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="description" content=" " />
         <meta name="keywords" content="" />
@@ -14,10 +14,10 @@
 
         <!-- App favicon -->
         <link rel="shortcut icon" href="{% static 'images/favicon.ico' %}">
-        
+
         {% block css %}
 
-        
+
         {% block extra_css %}
         {% endblock extra_css %}
 
@@ -72,7 +72,7 @@
 
                 </div> <!-- ????????? -->
                 <!-- End Page-content -->
-                
+
                 {% block subscribe %}
                     {% include 'partials/subscribe.html' %}
                 {% endblock subscribe %}
@@ -95,7 +95,7 @@
 
         </div>
         <!-- END layout-wrapper -->
-        
+
         {% block javascript %}
         {% endblock javascript %}
 
