--- a/templates/partials/navbar.html
+++ b/templates/partials/navbar.html
@@ -41,7 +41,7 @@
                             </li>
                             <li class="nav-item dropdown dropdown-hover">
                                 <a class="nav-link" href="javascript:void(0)" id="pagesdoropdown" role="button" data-bs-toggle="dropdown">
-                                    Pages
+                                    자료 게시판
                                     <div class="arrow-down"></div>
                                 </a>
                                 <div class="dropdown-menu dropdown-menu-lg dropdown-menu-center" aria-labelledby="pagesdoropdown">
@@ -84,7 +84,7 @@
                             </li><!--end dropdown-->
                             <li class="nav-item dropdown dropdown-hover">
                                 <a class="nav-link" href="javascript:void(0)" id="productdropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                                    Blog 
+                                    Blog
                                     <div class="arrow-down"></div>
                                 </a>
                                 <ul class="dropdown-menu dropdown-menu-center" aria-labelledby="productdropdown">
@@ -206,4 +206,3 @@
             </nav>
             <!-- Navbar End -->
 {% endblock navbar %}
-    
