--- a/templates/bookmark-jobs.html
+++ b/templates/bookmark-jobs.html
@@ -13,13 +13,13 @@
                             <div class="row justify-content-center">
                                 <div class="col-md-6">
                                     <div class="text-center text-white">
-                                        <h3 class="mb-4">Bookmarks Jobs</h3>
+                                        <h3 class="mb-4">내 폴더</h3>
                                         <div class="page-next">
                                             <nav class="d-inline-block" aria-label="breadcrumb text-center">
                                                 <ol class="breadcrumb justify-content-center">
                                                     <li class="breadcrumb-item"><a href="index.html">Home</a></li>
                                                     <li class="breadcrumb-item"><a href="javascript:void(0)">Profile</a></li>
-                                                    <li class="breadcrumb-item active" aria-current="page"> Bookmarks Jobs </li>
+                                                    <li class="breadcrumb-item active" aria-current="page"> 내 폴더 </li>
                                                 </ol>
                                             </nav>
                                         </div>
@@ -51,7 +51,7 @@
                             <div class="row align-items-center">
                                 <div class="col-lg-8">
                                     <div>
-                                        <h6 class="fs-16 mb-0"> Bookmarks Jobs </h6>
+                                        <h6 class="fs-16 mb-0"> 저장된 폴더 </h6>
                                     </div>
                                 </div><!--end col-->
                                 <div class="col-lg-4">
@@ -92,17 +92,12 @@
                                                 </div><!--end col-->
                                                 <div class="col-lg-9">
                                                     <div class="mt-3 mt-lg-0">
-                                                        <h5 class="fs-17 mb-1"><a href="job-details.html" class="text-dark">Business Associate</a> <small class="text-muted fw-normal">(2-4 Yrs Exp.)</small></h5>
+                                                        <h5 class="fs-17 mb-1"><a href="job-details.html" class="text-dark">중간 보고서</a></h5>
                                                         <ul class="list-inline mb-0">
                                                             <li class="list-inline-item">
-                                                                <p class="text-muted fs-14 mb-0">Jobcy Technology Pvt.Ltd</p>
+                                                                <p class="text-muted fs-14 mb-0">5개의 글 > </p>
                                                             </li>
-                                                            <li class="list-inline-item">
-                                                                <p class="text-muted fs-14 mb-0"><i class="mdi mdi-map-marker"></i> California</p>
-                                                            </li>
-                                                            <li class="list-inline-item">
-                                                                <p class="text-muted fs-14 mb-0"><i class="uil uil-wallet"></i> $250 - $800 / month</p>
-                                                            </li>
+
                                                         </ul>
                                                         <div class="mt-2">
                                                             <span class="badge bg-soft-danger mt-1">Part Time</span>
@@ -342,7 +337,7 @@
                                             </div><!--end row-->
                                         </div>
                                     </div><!--end job-box-->
-                                </div><!--end col-->    
+                                </div><!--end col-->
                             </div><!--end row-->
 
                             <div class="row">
