--- a/templates/partials/base.html
+++ b/templates/partials/base.html
@@ -42,7 +42,7 @@
       display: inline;
       margin-left: 10px;
     }
-    
+
   </style>
 </head>
 
@@ -84,7 +84,7 @@
         {% block content %}
         {% endblock content %}
 
-      </div> <!-- ????????? -->
+      </div>
       <!-- End Page-content -->
 
       {% block subscribe %}
