--- a/templates/index/notice.html
+++ b/templates/index/notice.html
@@ -13,13 +13,12 @@
                             <div class="row justify-content-center">
                                 <div class="col-md-6">
                                     <div class="text-center text-white">
-                                        <h3 class="mb-4">내 폴더</h3>
+                                        <h3 class="mb-4">공지사항</h3>
                                         <div class="page-next">
                                             <nav class="d-inline-block" aria-label="breadcrumb text-center">
                                                 <ol class="breadcrumb justify-content-center">
                                                     <li class="breadcrumb-item"><a href="index.html">Home</a></li>
-                                                    <li class="breadcrumb-item"><a href="javascript:void(0)">Profile</a></li>
-                                                    <li class="breadcrumb-item active" aria-current="page"> 내 폴더 </li>
+                                                    <li class="breadcrumb-item active" aria-current="page"> 공지사항 </li>
                                                 </ol>
                                             </nav>
                                         </div>
@@ -51,7 +50,7 @@
                             <div class="row align-items-center">
                                 <div class="col-lg-6">
                                     <div>
-                                        <h6 class="fs-16 mb-0"> 저장된 폴더 </h6>
+                                        <h6 class="fs-16 mb-0"> 공지사항 </h6>
                                     </div>
                                 </div><!--end col-->
                                 <div class="col-lg-4">
@@ -92,127 +91,17 @@
                                                         <h5 class="fs-17 mb-1"><a href="{% url 'job-details' %}" class="text-dark">중간 보고서</a></h5>
                                                         <ul class="list-inline mb-0">
                                                             <li class="list-inline-item">
-                                                                <p class="text-muted fs-14 mb-0">5개의 글 > </p>
+                                                                <p class="text-muted fs-14 mb-0">작성자:ljhyun 조회수:12  </p>
                                                             </li>
 
                                                         </ul>
 
                                                     </div>
                                                 </div><!--end col-->
-                                                <div class="col-lg-2 align-self-center mb-2 mt-2">
-                                                    <ul class="list-inline mb-0">
-                                                        <li class="list-inline-item" data-bs-toggle="tooltip" data-bs-placement="top" title="Edit">
-                                                            <a href="job-details.html" class="avatar-sm bg-soft-success d-inline-block text-center rounded-circle fs-18">
-                                                                <i class="mdi mdi-pencil"></i>
-                                                            </a>
-                                                        </li>
-                                                        <li class="list-inline-item" data-bs-toggle="tooltip" data-bs-placement="top" title="Delete">
-                                                            <a href="javascript:void(0)" data-bs-toggle="modal" data-bs-target="#deleteModal"  class="avatar-sm bg-soft-danger d-inline-block text-center rounded-circle fs-18">
-                                                                <i class="uil uil-trash-alt"></i>
-                                                            </a>
-                                                        </li>
-                                                    </ul>
-                                                </div>
-                                            </div><!--end row-->
-                                        </div>
-                                    </div><!--end job-box-->
-                                    <div class="job-box card mt-4">
-                                        <div class="card-body p-4">
-                                            <div class="row align-items-center">
-                                                <div class="col-lg-10">
-                                                    <div class="mt-3 mt-lg-0">
-                                                        <h5 class="fs-17 mb-1"><a href="{% url 'job-details' %}" class="text-dark">데이터 자료</a></h5>
-                                                        <ul class="list-inline mb-0">
-                                                            <li class="list-inline-item">
-                                                                <p class="text-muted fs-14 mb-0">5개의 글 > </p>
-                                                            </li>
-
-                                                        </ul>
-
-                                                    </div>
-                                                </div><!--end col-->
-                                                <div class="col-lg-2 align-self-center mb-2 mt-2">
-                                                    <ul class="list-inline mb-0">
-                                                        <li class="list-inline-item" data-bs-toggle="tooltip" data-bs-placement="top" title="Edit">
-                                                            <a href="job-details.html" class="avatar-sm bg-soft-success d-inline-block text-center rounded-circle fs-18">
-                                                                <i class="mdi mdi-pencil"></i>
-                                                            </a>
-                                                        </li>
-                                                        <li class="list-inline-item" data-bs-toggle="tooltip" data-bs-placement="top" title="Delete">
-                                                            <a href="javascript:void(0)" data-bs-toggle="modal" data-bs-target="#deleteModal"  class="avatar-sm bg-soft-danger d-inline-block text-center rounded-circle fs-18">
-                                                                <i class="uil uil-trash-alt"></i>
-                                                            </a>
-                                                        </li>
-                                                    </ul>
-                                                </div>
-                                            </div><!--end row-->
-                                        </div>
-                                    </div><!--end job-box-->
-                                    <div class="job-box card mt-4">
-                                        <div class="card-body p-4">
-                                            <div class="row align-items-center">
-                                                <div class="col-lg-10">
-                                                    <div class="mt-3 mt-lg-0">
-                                                        <h5 class="fs-17 mb-1"><a href="{% url 'job-details' %}" class="text-dark">심층처분 과제</a></h5>
-                                                        <ul class="list-inline mb-0">
-                                                            <li class="list-inline-item">
-                                                                <p class="text-muted fs-14 mb-0">5개의 글 > </p>
-                                                            </li>
-
-                                                        </ul>
-
-                                                    </div>
-                                                </div><!--end col-->
-                                                <div class="col-lg-2 align-self-center mb-2 mt-2">
-                                                    <ul class="list-inline mb-0">
-                                                        <li class="list-inline-item" data-bs-toggle="tooltip" data-bs-placement="top" title="Edit">
-                                                            <a href="job-details.html" class="avatar-sm bg-soft-success d-inline-block text-center rounded-circle fs-18">
-                                                                <i class="mdi mdi-pencil"></i>
-                                                            </a>
-                                                        </li>
-                                                        <li class="list-inline-item" data-bs-toggle="tooltip" data-bs-placement="top" title="Delete">
-                                                            <a href="javascript:void(0)" data-bs-toggle="modal" data-bs-target="#deleteModal"  class="avatar-sm bg-soft-danger d-inline-block text-center rounded-circle fs-18">
-                                                                <i class="uil uil-trash-alt"></i>
-                                                            </a>
-                                                        </li>
-                                                    </ul>
-                                                </div>
                                             </div><!--end row-->
                                         </div>
                                     </div><!--end job-box-->
 
-                                    <div class="job-box card mt-4">
-                                        <div class="card-body p-4">
-                                            <div class="row align-items-center">
-                                                <div class="col-lg-10">
-                                                    <div class="mt-3 mt-lg-0">
-                                                        <h5 class="fs-17 mb-1"><a href="{% url 'job-details' %}" class="text-dark">N/star 보고서</a></h5>
-                                                        <ul class="list-inline mb-0">
-                                                            <li class="list-inline-item">
-                                                                <p class="text-muted fs-14 mb-0">5개의 글 > </p>
-                                                            </li>
-
-                                                        </ul>
-
-                                                    </div>
-                                                </div><!--end col-->
-                                                <div class="col-lg-2 align-self-center mb-2 mt-2">
-                                                    <ul class="list-inline mb-0">
-                                                        <li class="list-inline-item" data-bs-toggle="tooltip" data-bs-placement="top" title="Edit">
-                                                            <a href="job-details.html" class="avatar-sm bg-soft-success d-inline-block text-center rounded-circle fs-18">
-                                                                <i class="mdi mdi-pencil"></i>
-                                                            </a>
-                                                        </li>
-                                                        <li class="list-inline-item" data-bs-toggle="tooltip" data-bs-placement="top" title="Delete">
-                                                            <a href="javascript:void(0)" data-bs-toggle="modal" data-bs-target="#deleteModal"  class="avatar-sm bg-soft-danger d-inline-block text-center rounded-circle fs-18">
-                                                                <i class="uil uil-trash-alt"></i>
-                                                            </a>
-                                                        </li>
-                                                    </ul>
-                                                </div>
-                                            </div><!--end row-->
-                                        </div>
-                                    </div><!--end job-box-->
                                 </div><!--end col-->
                                 <div class="col-lg-2">
                                   <div class="accordion-item mt-3">
