--- a/templates/pages/candidates-company/candidate-list.html
+++ b/templates/pages/candidates-company/candidate-list.html
@@ -153,15 +153,13 @@
             <div class="card-body p-4">
               <div class="row align-items-center">
                 <div class="col-auto">
-                  <h4 style="display:inline"> 보고서 </h4>
-                  <div class="vl"></div>
 
                 </div>
                 <!--end col-->
 
                 <div class="col-lg-5">
                   <div class="candidate-list-content mt-3 mt-lg-0">
-                    <h5 class="fs-19 mb-1"><a href="{% url 'candidate-details' %}" class="primary-link">제목</a> </h5>
+                    <h5 class="fs-19 mb-1"><a href="{% url 'candidate-details' %}" class="primary-link">심층처분시스템 보고서</a> </h5>
                     <p class="text-muted mb-2"> NCS | 이정현</p>
                     <ul class="list-inline mb-0 text-muted">
                       <li class="list-inline-item">
@@ -231,57 +229,13 @@
           </div>
           <!--end card-->
 
-          <div class="candidate-list-box card mt-4">
-            <div class="card-body p-4">
-              <div class="row align-items-center">
-                <div class="col-auto">
-                  <div class="candidate-list-images">
-                    <a href="javascript:void(0)"><img src="{% static 'images/user/img-03.jpg' %}" alt="" class="avatar-md img-thumbnail rounded-circle"></a>
-                  </div>
-                </div>
-                <!--end col-->
-                <div class="col-lg-5">
-                  <div class="candidate-list-content mt-3 mt-lg-0">
-                    <h5 class="fs-19 mb-0"><a href="{% url 'candidate-details' %}" class="primary-link">Betty Richards</a> <span class="badge bg-success ms-1"><i class="mdi mdi-star align-middle"></i> 4.5</span></h5>
-
-                    <p class="text-muted mb-2"> Graphic Designer</p>
-                    <ul class="list-inline mb-0 text-muted">
-                      <li class="list-inline-item">
-                        <i class="mdi mdi-map-marker"></i> Oakridge Lane California
-                      </li>
-                      <li class="list-inline-item">
-                        <i class="uil uil-wallet"></i> $380 / hours
-                      </li>
-                    </ul>
-                  </div>
-                </div>
-                <!--end col-->
-                <div class="col-lg-4">
-                  <div class="mt-2 mt-lg-0">
-                    <span class="badge bg-soft-muted fs-14 mt-1">design</span>
-                    <span class="badge bg-soft-muted fs-14 mt-1">Developer</span>
-                  </div>
-                </div>
-              </div>
-              <!--end row-->
-              <div class="favorite-icon">
-                <a href="javascript:void(0)"><i class="uil uil-heart-alt fs-18"></i></a>
-              </div>
-            </div>
-          </div>
-          <!--end card-->
 
 
           <!-- start card -->
           <div class="candidate-list-box card mt-4">
             <div class="card-body p-4">
               <div class="row align-items-center">
-                <div class="col-auto">
-                  <h4 style="display:inline"> 보고서 </h4>
-                  <div class="vl"></div>
 
-                </div>
-                <!--end col-->
 
                 <div class="col-lg-5">
                   <div class="candidate-list-content mt-3 mt-lg-0">
@@ -317,49 +271,6 @@
           <!--end card-->
 
 
-          <!-- start card -->
-          <div class="candidate-list-box card mt-4">
-            <div class="card-body p-4">
-              <div class="row align-items-center">
-                <div class="col-auto">
-                  <h4 style="display:inline"> 보고서 </h4>
-                  <div class="vl"></div>
-
-                </div>
-                <!--end col-->
-
-                <div class="col-lg-5">
-                  <div class="candidate-list-content mt-3 mt-lg-0">
-                    <h5 class="fs-19 mb-1"><a href="{% url 'candidate-details' %}" class="primary-link">제목</a> </h5>
-                    <p class="text-muted mb-2"> NCS | 이정현</p>
-                    <ul class="list-inline mb-0 text-muted">
-                      <li class="list-inline-item">
-                        <i class="mdi mdi-map-marker"></i> 등록일자
-                      </li>
-                      <li class="list-inline-item">
-                        <i class="uil uil-wallet"></i> 조회수
-                      </li>
-                    </ul>
-                  </div>
-                </div>
-                <!--end col-->
-
-                <div class="col-lg-4">
-                  <div class="mt-2 mt-lg-0">
-                    <span class="badge bg-soft-muted fs-14 mt-1">파일명1</span>
-                    <span class="badge bg-soft-muted fs-14 mt-1">파일명2</span>
-                    <span class="badge bg-soft-muted fs-14 mt-1">파일명3</span>
-                  </div>
-                </div>
-                <!--end col-->
-              </div>
-              <!--end row-->
-              <div class="favorite-icon">
-                <a href="javascript:void(0)"><i class="uil uil-folder-plus fs-18"></i></a>
-              </div>
-            </div>
-          </div>
-          <!--end card-->
 
         </div>
         <!--end candidate-list-->
