--- a/templates/profile.html
+++ b/templates/profile.html
@@ -54,30 +54,7 @@
               <img src="{% static 'images/profile.jpg' %}" alt="" class="avatar-lg img-thumbnail rounded-circle mb-4" />
               <h5 class="mb-0">Jennifer Dickens</h5>
               <p class="text-muted">Developer</p>
-              <ul class="list-inline d-flex justify-content-center align-items-center ">
-                <li class="list-inline-item text-warning fs-19">
-                  <i class="mdi mdi-star"></i>
-                  <i class="mdi mdi-star"></i>
-                  <i class="mdi mdi-star"></i>
-                  <i class="mdi mdi-star"></i>
-                  <i class="mdi mdi-star-half-full"></i>
-                </li>
-              </ul>
-              <ul class="candidate-detail-social-menu list-inline mb-0">
-                <li class="list-inline-item">
-                  <a href="javascript:void(0)" class="social-link rounded-3 btn-soft-primary">
-                    <i class="uil uil-facebook-f"></i></a>
-                </li>
-                <li class="list-inline-item">
-                  <a href="javascript:void(0)" class="social-link rounded-3 btn-soft-info"><i class="uil uil-twitter-alt"></i></a>
-                </li>
-                <li class="list-inline-item">
-                  <a href="javascript:void(0)" class="social-link rounded-3 btn-soft-success"><i class="uil uil-whatsapp"></i></a>
-                </li>
-                <li class="list-inline-item">
-                  <a href="javascript:void(0)" class="social-link rounded-3 btn-soft-danger"><i class="uil uil-phone-alt"></i></a>
-                </li>
-              </ul>
+
             </div>
             <!--end profile-->
             <div class="mt-4">
@@ -157,88 +134,6 @@
                     resume document.
                   </p>
                 </div>
-                <div class="candidate-education-details mt-4">
-                  <h6 class="fs-18 fw-bold mb-0">Education</h6>
-                  <div class="candidate-education-content mt-4 d-flex">
-                    <div class="circle flex-shrink-0 bg-soft-primary">
-                      B
-                    </div>
-                    <div class="ms-4">
-                      <h6 class="fs-16 mb-1">
-                        BCA - Bachelor of Computer Applications
-                      </h6>
-                      <p class="mb-2 text-muted">
-                        International University - (2004 - 2010)
-                      </p>
-                      <p class="text-muted">
-                        There are many variations of passages of available,
-                        but the majority alteration in some form. As a
-                        highly skilled and successfull product development
-                        and design specialist with more than 4 Years of My
-                        experience.
-                      </p>
-                    </div>
-                  </div>
-                  <div class="candidate-education-content mt-3 d-flex">
-                    <div class="circle flex-shrink-0 bg-soft-primary">
-                      M
-                    </div>
-                    <div class="ms-4">
-                      <h6 class="fs-16 mb-1">
-                        MCA - Master of Computer Application
-                      </h6>
-                      <p class="mb-2 text-muted">
-                        International University - (2010 - 2012)
-                      </p>
-                      <p class="text-muted">
-                        There are many variations of passages of available,
-                        but the majority alteration in some form. As a
-                        highly skilled and successfull product development
-                        and design specialist with more than 4 Years of My
-                        experience.
-                      </p>
-                    </div>
-                  </div>
-                  <div class="candidate-education-content mt-3 d-flex">
-                    <div class="circle flex-shrink-0 bg-soft-primary">
-                      D
-                    </div>
-                    <div class="ms-4">
-                      <h6 class="fs-16 mb-1">Design Communication Visual</h6>
-                      <p class="text-muted mb-2">
-                        International University - (2012-2015)
-                      </p>
-                      <p class="text-muted">
-                        There are many variations of passages of available,
-                        but the majority alteration in some form. As a
-                        highly skilled and successfull product development
-                        and design specialist with more than 4 Years of My
-                        experience.
-                      </p>
-                    </div>
-                  </div>
-                </div>
-                <div class="candidate-education-details mt-4">
-                  <h6 class="fs-18 fw-bold mb-0">Experiences</h6>
-                  <div class="candidate-education-content mt-4 d-flex">
-                    <div class="circle flex-shrink-0 bg-soft-primary"> W </div>
-                    <div class="ms-4">
-                      <h6 class="fs-16 mb-1">Web Design & Development Team Leader</h6>
-                      <p class="mb-2 text-muted">Creative Agency - (2013 - 2016)</p>
-                      <p class="text-muted">There are many variations of passages of available, but the majority alteration in some form. As a highly skilled and successfull product development and design specialist with more than 4 Years of My
-                        experience.</p>
-                    </div>
-                  </div>
-                  <div class="candidate-education-content mt-4 d-flex">
-                    <div class="circle flex-shrink-0 bg-soft-primary"> P </div>
-                    <div class="ms-4">
-                      <h6 class="fs-16 mb-1">Project Manager</h6>
-                      <p class="mb-2 text-muted">Jobcy Technology Pvt.Ltd - (Pressent)</p>
-                      <p class="text-muted mb-0">There are many variations of passages of available, but the majority alteration in some form. As a highly skilled and successfull product development and design specialist with more than 4 Years of My
-                        experience.</p>
-                    </div>
-                  </div>
-                </div>
                 <div class="mt-4">
                   <h5 class="fs-18 fw-bold">Skills</h5>
                   <span class="badge fs-13 bg-soft-blue mt-2">Cloud Management</span>
@@ -246,6 +141,10 @@
                   <span class="badge fs-13 bg-soft-blue mt-2">Network Architecture</span>
                   <span class="badge fs-13 bg-soft-blue mt-2">PHP</span>
                   <span class="badge fs-13 bg-soft-blue mt-2">Bootstrap</span>
+                  <span class="badge fs-13 bg-soft-blue mt-2">UI & UX Designer</span>
+                  <span class="badge fs-13 bg-soft-blue mt-2">UI & UX Designer</span>
+                  <span class="badge fs-13 bg-soft-blue mt-2">UI & UX Designer</span>
+                  <span class="badge fs-13 bg-soft-blue mt-2">UI & UX Designer</span>
                   <span class="badge fs-13 bg-soft-blue mt-2">UI & UX Designer</span>
                 </div>
                 <div class="mt-4">
@@ -288,7 +187,7 @@
                       <div class="col-lg-6">
                         <div class="mb-3">
                           <label for="firstName" class="form-label">회사</label>
-                          <input type="text" class="form-control" id="firstName" value="Jennifer" />
+                          <input type="text" class="form-control" id="firstName" value="엔씨스퀘어" />
                         </div>
                       </div>
                       <!--end col-->
