--- a/templates/pages/extra-pages/cal.html
+++ b/templates/pages/extra-pages/cal.html
@@ -7,11 +7,20 @@
 <style>
   .calendar tr,
   .calendar td {
-    border: 1px solid black;
+    border: 1px solid #eff0f2;
+  }
+
+  .calendar ul {
+    height: 60px;
+    overflow: overlay;
+  }
+
+  .calendar li {
+    font-size: 13px;
   }
 
   .calendar {
-    width: 80%;
+    width: 100%;
     height: 100%;
     table-layout: fixed;
     margin-left: auto;
@@ -57,6 +66,16 @@
     box-shadow: 0 2px 3px 0 rgba(34, 36, 38, 0.15);
 
     transform: translateX(-50%) translateY(-50%);
+  }
+
+  .right {
+    float: right;
+    margin: 5px;
+  }
+
+  .clearfix a {
+    font-size: 13px;
+    line-height: 10px;
   }
 </style>
 {% endblock extra_css %}
@@ -124,7 +143,31 @@
   </div>
 </div>
 <!-- END SHAPE -->
-{{ calendar }}
+<section class="section">
+  <div class="container">
+
+    <div class="row">
+      <div class="col-lg-7"> </div>
+      <div class="col-lg-5">
+        <div class="clearfix">
+          <a class="btn btn-soft-primary right" href="{% url 'calendar' %}?{{ prev_month }} "> Previous Month </a>
+          <a class="btn btn-primary right" href="{% url 'calendar' %}"> Today </a>
+          <a class="btn btn-soft-primary right" href="{% url 'calendar' %}?{{ next_month }}"> Next Month </a>
+        </div>
+      </div>
+      <div class="col-lg-12"> {{ calendar }} </div>
+      <div class="col-lg-10"></div>
+      <div class="col-lg-2">
+        <a class="btn btn-soft-primary rounded-pill right add" data-toggle="modal" data-target="#add-schedule" href="#"> + Add Schedule </a>
+      </div>
+
+
+    </div>
+  </div>
+
+
+
+</section>
 {% endblock content %}
 {% block javascript %}
 
