--- a/templates/index/index-2.html
+++ b/templates/index/index-2.html
@@ -15,9 +15,10 @@
                             <div class="row align-items-center">
                                 <div class="col-lg-7">
                                     <div class="mb-4 pb-3 me-lg-5">
-                                        <h6 class="sub-title">We have 150,000+ live jobs</h6>
-                                        <h1 class="display-5 fw-semibold mb-3">Find your dream jobs with <span class="text-primary fw-bold">Jobcy</span></h1>
-                                        <p class="lead text-muted mb-0">Find jobs, create trackable resumes and enrich your applications.Carefully crafted after analyzing the needs of different industries.</p>
+                                        <h6 class="sub-title">We have 150,000+ live docs</h6>
+                                        <h1 class="display-5 fw-semibold mb-3"> Work together with <br><span class="text-primary fw-bold">KINS</span> File Cloud</h1>
+                                        <p class="lead text-muted mb-0">KINS Cloud에서는 자료게시판을 통해 파일문서를 업로드하여 다양한 기관들이 함께 공유하고, 관리할 수 있습니다.
+                                          그 외에도 각 기관별 일정 관리, 공지사항 안내 등 업무공유를 위한 다양한 서비스를 제공하고 있습니다.</p>
                                     </div>
 
                                 </div>
@@ -257,78 +258,6 @@
                     </section>
                     <!-- END PROCESS -->
 
-                    <!-- START TESTIMONIAL -->
-                    <section class="section">
-                        <div class="container">
-                            <div class="row justify-content-center">
-                                <div class="col-lg-6">
-                                    <div class="section-title text-center mb-4 pb-2">
-                                        <h3 class="title mb-3">참여 연구기관</h3>
-                                        <p class="text-muted">Post a job to tell us about your project. We'll quickly match you with the
-                                            right freelancers.</p>
-                                    </div>
-                                </div>
-                                <!--end col-->
-                            </div>
-                            <!--end row-->
-                            <div class="row justify-content-center">
-                                <div class="col-lg-10">
-                                    <div class="swiper testimonialSlider pb-5">
-                                        <div class="swiper-wrapper">
-                                            <div class="swiper-slide">
-                                                <div class="card testi-box">
-                                                    <div class="card-body">
-                                                        <div class="mb-4">
-                                                            <img src="{% static 'images/logo/mailchimp.svg' %}" height="50" alt="">
-                                                        </div>
-                                                        <p class="testi-content lead text-muted mb-4">" Very well thought out and articulate communication.
-                                                            Clear milestones, deadlines and fast work. Patience. Infinite patience. No
-                                                            shortcuts. Even if the client is being careless. "</p>
-                                                        <h5 class="mb-0">Jeffrey Montgomery</h5>
-                                                        <p class="text-muted mb-0">Product Manager</p>
-                                                    </div>
-                                                </div>
-                                            </div><!--end swiper-slide-->
-                                            <div class="swiper-slide">
-                                                <div class="card testi-box">
-                                                    <div class="card-body">
-                                                        <div class="mb-4">
-                                                            <img src="{% static 'images/logo/wordpress.svg' %}" height="50" alt="">
-                                                        </div>
-                                                        <p class="testi-content lead text-muted mb-4">" Very well thought out and articulate communication.
-                                                            Clear milestones, deadlines and fast work. Patience. Infinite patience. No
-                                                            shortcuts. Even if the client is being careless. "</p>
-                                                        <h5 class="mb-0">Rebecca Swartz</h5>
-                                                        <p class="text-muted mb-0">Creative Designer</p>
-                                                    </div>
-                                                </div>
-                                            </div><!--end swiper-slide-->
-                                            <div class="swiper-slide">
-                                                <div class="card testi-box">
-                                                    <div class="card-body">
-                                                        <div class="mb-4">
-                                                            <img src="{% static 'images/logo/Instagram.svg' %}" height="50" alt="">
-                                                        </div>
-                                                        <p class="testi-content lead text-muted mb-4">" Very well thought out and articulate communication.
-                                                            Clear milestones, deadlines and fast work. Patience. Infinite patience. No
-                                                            shortcuts. Even if the client is being careless. "</p>
-                                                        <h5 class="mb-0">Charles Dickens</h5>
-                                                        <p class="text-muted mb-0">Store Assistant</p>
-                                                    </div>
-                                                </div>
-                                            </div><!--end swiper-slide-->
-                                        </div>
-                                        <!--end swiper-wrapper-->
-                                        <div class="swiper-pagination"></div>
-                                    </div>
-                                    <!--end swiper-container  -->
-                                </div>
-                                <!--end col-->
-                            </div>
-                            <!--end row-->
-                        </div>
-                    </section>
-                    <!-- END TESTIMONIAL -->
 
                     <!-- START CLIENT -->
                     <div class="py-4">
